Fix local build